removed require as it felt unnecessary since i'm pretty much done with js work for now, and started playing with prism for syntax highlighting

--- a/content/large_json.html
+++ b/content/large_json.html
@@ -1,1 +1,8 @@
 This is my blog post on loading large json files with requests - some of the trouble we had and how we debugged and solved the problem
+
+
+<pre class="language-python">
+    x = 1 + "Hello"
+    requests.get(my_url, stream=True)
+    ijson.items(http_response.raw, 'segments.item')
+</pre>
