--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
     <head>
         <link rel="stylesheet" type="text/css" href="main.css">
         <script type="text/javascript" src="http://livejs.com/live.js"></script>
-        <script data-main="main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.19/require.min.js"></script>
+        <script src="main.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js""></script>
     </head>
     <body>
         <header class="header">Leo Hemsted</header>
