download prism locally so i can chose the syntax highlighting style. also call Prism.highlightAll after AJAX calls to ensure it re-renders new elements

--- a/content/large_json.html
+++ b/content/large_json.html
@@ -1,8 +1,15 @@
-This is my blog post on loading large json files with requests - some of the trouble we had and how we debugged and solved the problem
+lorem ipsum blah blah
 
+<pre>
+    <code class="language-python">
+    # this is a comment
+    def foo(a):
+        return a + 1 + "string"
+    </code>
+</pre>
 
-<pre class="language-python">
-    x = 1 + "Hello"
-    requests.get(my_url, stream=True)
-    ijson.items(http_response.raw, 'segments.item')
+<pre>
+    <code class="language-json">
+    { "a" : 2, "b": true}
+    </code>
 </pre>
