--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="main.css">
-        <script type="text/javascript" src="http://livejs.com/live.js"></script>
+        <link rel="stylesheet" type="text/css" href="libs/prism.css">
         <script src="main.js"></script>
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js""></script>
+        <script src="libs/prism.js"></script>
     </head>
     <body>
+
         <header class="header">Leo Hemsted</header>
         <section class="content">
             <div class="nav">
