holy shit i actually wrote some stuff

--- a/content/index.html
+++ b/content/index.html
@@ -1,7 +1,7 @@
 I'm Leo! I'm a full stack python web developer currently based in west London.
 <br/>
 <br/>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+I've been working with JavaScript, Python and Postgres for a few years now, and though it changes pretty regularly my current passions at work typically revolve around SQLAlchemy, setup.py, API design in general, and the jasmine.js testing framework.
 <br/>
 <br/>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Further questions? Drop me a line at leo [ . ] hemsted [ at ] gmail [ . ] com.
