and i can close a tags too

--- a/content/large_json.html
+++ b/content/large_json.html
@@ -160,7 +160,7 @@ A huge saving! We've gone from 72 seconds of processing down to just 8.3 seconds
 
 It's still taking 11 seconds from firing off the request (in our harness, the other service was just loading the json from disk each time), and we'd like to get that down.
 
-The first obvious step is to improve how we parse the data. <a href="https://github.com/esnme/ultrajson">ujson" is a blisteringly fast json library
+The first obvious step is to improve how we parse the data. <a href="https://github.com/esnme/ultrajson">ujson</a> is a blisteringly fast json library
 
 <pre>
     <code class="language-python">
