--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        <header class="header">Leo Hemsted (this mah website!)</header>
+        <header class="header">Leo Hemsted (I code and stuff!)</header>
     <hr/>
         <section class="content">
             <div class="nav">
