--- a/content/index.html
+++ b/content/index.html
@@ -4,4 +4,4 @@ I'm Leo! I'm a full stack python web developer currently based in west London.
 I've been working with JavaScript, Python and Postgres for a few years now, and though it changes pretty regularly my current passions at work typically revolve around SQLAlchemy, setup.py, API design in general, and right now the jasmine.js testing framework. I'll try and keep some semblance of blog here but no promises.
 <br/>
 <br/>
-Further questions? Drop me a line at leohemsted [ at ] gmail [ . ] com.
+Further questions? Drop me a line at leohemsted [ at ] gmail [ dot ] com.
